<resources>
    <string name="app_name">Impulse</string>
    <string name="str_save_your_time">Vaqtingizni tejang</string>
    <string name="str_advice_doctors">Malakali shifokorlar maslahati</string>
    <string name="str_active_support">Qo\'llab quvvatlash</string>
    <string name="str_skip">O\'tkazib yuborish</string>
    <string name="str_next">Keyingisi</string>
    <string name="str_description_time">Tezkorlik vaqtingizni tejaydi. <big>Impulse</big>ni ishlating hamda qo\'shimcha vaqtga egalik qiling</string>
    <string name="str_description_doctors"><b>Impulse</b> bilan eng malakali shifokorlar maslahatlariga quloq soling</string>
    <string name="str_description_support"><b>Impulse</b> sizni mamnunlik bilan qarshi oladi. Doimiy yordamini ayamaydi</string>
    <string name="str_continue">Davom etdirish</string>
    <string name="str_get_started">Boshlash</string>
    <string name="str_country_region">Mamlakat/Viloyat</string>
    <string name="str_phone_number">Telefon raqami</string>
    <string name="str_term_of_use"><b>Foydalanish shartlari</b> bilan tanishib chiqdim</string>
    <string name="str_hasnt_get_code">Kodni qabul qilmadingizmi? <b>Qayta yuborish</b></string>
    <string name="str_code_sent">Tasdiqlash kodi <b>%s</b> raqamga yuborildi.
Agar hali ham kodni qabul qilmagan bo\'lsangiz, iltimos raqamingizni qaytadan kiriting.</string>
    <string name="str_fio">F.I.O</string>
    <string name="str_fio_helper">Familiya Ism Otasining ismi</string>
    <string name="str_fio_error">Iltimos F.I.O ni to\'ldiring</string>
    <string name="str_jshir">JSHIR</string>
    <string name="str_jshir_helper">Jismoniy shaxs identifikatsion raqami</string>
    <string name="str_jshir_error">Iltimos JSHIR ni to\'ldiring</string>
    <string name="str_jshir_error_length">JSHIR uzunligi 14 raqamdan iborat bo\'lishi kerak</string>
    <string name="str_passport">Passport seriya raqami</string>
    <string name="str_passport_helper">Masalan AA 1234567</string>
    <string name="str_passport_error">Iltimos passport ma\'lumotlaringizni kiriting</string>
    <string name="str_help_needed">Tez yordam kerakmi?</string>
    <string name="str_hold_button">Shunchaki tugmani bosib turing</string>
    <string name="str_accident">Halokatga uchradim</string>
    <string name="str_injury">Jarohatlandim</string>
    <string name="str_feeling_bad">O\'zimni yomon his qilyapman</string>
    <string name="str_not_sure">Nima qilishni bilmaysizmi?</string>
    <string name="str_pick_subject">Yordam olish uchun mavzuni tanlang</string>
    <string name="str_hello_name">Salom %s</string>
    <string name="str_see_location">Manzilingizni ko\'ring</string>
    <string name="str_sms_sending_contacts">Halokat paytida yaqinlaringizga xabar bering</string>
    <string name="str_contacts">Kontaktlar</string>
    <string name="str_add">Qo\'shish</string>
    <string name="str_search">Qidirish</string>
    <string name="str_message">Xabar</string>
    <string name="str_edit">Edit:</string>
    <string name="str_profile_data">Profile data:</string>
    <string name="str_age">Age:</string>
    <string name="str_blood_type">Blood type:</string>
    <string name="str_height">Height:</string>
    <string name="str_weight">Weight:</string>
    <string name="str_textSize">16sp</string>
    <string name="str_no_contacts">Sizda hozircha kontaktlar mavjud emas</string>
    <string name="str_dialog_text">Holatingiz qanaqa?</string>
    <string name="str_not_bad">Qoniqarli</string>
    <string name="str_easy">Yengil</string>
    <string name="str_medium">O\'rta</string>
    <string name="str_hard">Og\'ir</string>
    <string name="str_hardest">Juda og\'ir</string>
    <string name="str_accept">Tasdiqlash</string>
    <string name="str_ignore">Bekor Qilish</string>
    <string name="str_disclaimer">Ichki ishlar organi, yongʼinga qarshi xizmat,
        tibbiy tez yordam va boshqa maxsus xizmatlarni qasddan aldab chaqirganlik — bazaviy hisoblash miqdorining
        bir baravaridan uch baravarigacha miqdorda jarima solishga sabab boʼladi.</string>
    <string name="str_show_law">Qonun bilan tanishish</string>
    <string name="str_message_that_will_be_sent">Yuboriladigan xabar</string>
    <string name="str_message_with_location">Bu xabar kontaktlaringizga manzilingizga qo\'shib yuboriladi</string>
    <string name="str_enter_message">Xabarni kiriting</string>
    <string name="str_open_law">https://www.lex.uz/docs/97664#:~:text=754/0134%2D%D1%81%D0%BE%D0%BD)-,199%2D%D0%BC%D0%BE%D0%B4%D0%B4%D0%B0.%20%D0%9C%D0%B0%D1%85%D1%81%D1%83%D1%81%20%D1%85%D0%B8%D0%B7%D0%BC%D0%B0%D1%82%D0%BB%D0%B0%D1%80%D0%BD%D0%B8%20%D2%9B%D0%B0%D1%81%D0%B4%D0%B4%D0%B0%D0%BD%20%D0%B0%D0%BB%D0%B4%D0%B0%D0%B1%20%D1%87%D0%B0%D2%9B%D0%B8%D1%80%D0%B3%D0%B0%D0%BD%D0%BB%D0%B8%D0%BA,-%D0%9E%D0%BB%D0%B4%D0%B8%D0%BD%D0%B3%D0%B8%C2%A0%D1%82%D0%B0%D2%B3%D1%80%D0%B8%D1%80%D0%B3%D0%B0%C2%A0%D2%9B%D0%B0%D1%80%D0%B0%D0%BD%D0%B3</string>
    >
    <string name="str_delete_contact">Kontakt o\'chirilsinmi?</string>
    <string name="str_first_aid">Tez tibbiy yordam</string>
    <string name="str_first_aid_for">Quyidagi holatlar uchun yordam tibbiy yordam...</string>
    <string name="str_hypothermia">Gipotermiya</string>
    <string name="str_meningitis">Meningit</string>
    <string name="str_poisoning">Zaharlanish/zararli moddalar</string>
    <string name="str_psychological">Birinchi psixologik yordam</string>
    <string name="str_seizure">Tutqanoq tutishi</string>
    <string name="str_stings">Zararkunandalar chaqishi/tishlashi</string>
    <string name="str_strains">Suyaklar qayrilishi</string>
    <string name="str_allergies">Allergik holatlar</string>
    <string name="str_stroke">Insult</string>
    <string name="str_asthma_attack">Astma xuruji</string>
    <string name="str_unconscious">Hushini yo\'qotish</string>
    <string name="str_bleeding">Qon ketishi</string>
    <string name="str_broken_bone">Suyaklar sinishi</string>
    <string name="str_burns">Kuyish</string>
    <string name="str_choking">Tiqilib qolish</string>
    <string name="str_diabetic_emergency">Qandli diabet</string>
    <string name="str_distress">Stress holatlari</string>
    <string name="str_head_injury">Bosh jarohatlari</string>
    <string name="str_heart_attack">Yurak xuruji</string>
    <string name="str_heat_stroke">Quyosh urishi</string>
    <string name="str_has_called">Tez yordam chaqirilgan</string>
    <string name="str_press_and_hold">Tugmani bosing va ushlab turing</string>
    <string name="str_double_tap_to_exit">Chiqish uchun ikki marta bosing</string>
    <string name="str_ambulance_on_way">Tez yordam kelyapti</string>
    <string name="str_dont_panic">Vahima qilmang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    For map use key-->
    <string name="google_maps_key">AIzaSyArtvZuAVTJNY74sqLojOlnI3mQnyZGo7c</string>
    <string name="no_location_data_provided">no_location_data_provided</string>
    <string name="service_not_available">service_not_available</string>
    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="address_found">address_found</string>
    <string name="str_back">Orqaga</string>
</resources>