<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:text="@string/str_dialog_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialog">

        <RadioButton
            android:id="@+id/rbNotBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_red"
            android:text="@string/str_not_bad" />

        <RadioButton
            android:id="@+id/rbEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_red"
            android:text="@string/str_easy" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_red"
            android:text="@string/str_medium" />

        <RadioButton
            android:id="@+id/rbHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_red"
            android:text="@string/str_hard" />

        <RadioButton
            android:id="@+id/rbHardest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_red"
            android:text="@string/str_hardest" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>