<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="10dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_fileName="advice_of_doctors.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/str_save_your_time"
        android:textColor="@color/intro_title_color"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/str_description_time"
        android:textColor="@color/intro_text_color"
        android:textSize="16sp" />

</LinearLayout>