<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/mainPhoneNumber"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.PhoneNumberFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:paddingEnd="50dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/intro_title_color"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/str_country_region"
            android:textSize="16sp" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ccpDialog_initialScrollToSelection="true"
            app:ccpDialog_showCloseIcon="true"
            app:ccpDialog_showFastScroller="true"
            app:ccpDialog_showPhoneCode="true"
            app:ccp_arrowColor="@color/black"
            app:ccp_arrowSize="30sp"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoFormatNumber="true"
            app:ccp_contentColor="@color/black"
            app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
            app:ccp_countryPreference="UZ"
            app:ccp_defaultLanguage="UZBEK"
            app:ccp_flagBorderColor="@color/white"
            app:ccp_rememberLastSelection="true"
            app:ccp_showFlag="false"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="false"
            app:ccp_textGravity="LEFT"
            app:ccp_textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/ll_bg_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="5"
                android:maxLines="1"
                android:textColorHint="@color/black" />


            <LinearLayout
                android:id="@+id/llPhoneCode"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/ll_bg_color"
                android:orientation="horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight=".6"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/str_phone_number"
                android:inputType="phone"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/llPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/ll_bg_color"
                android:orientation="horizontal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tvTermsOfUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_term_of_use"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chbTerms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:buttonTint="@color/main_red" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_btn_intro_page"
                android:enabled="false"
                android:paddingVertical="12dp"
                android:text="@string/str_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>